[feature] ukol2 - input scitani

--- a/ukol2.html
+++ b/ukol2.html
@@ -4,33 +4,26 @@
 	<meta charset="utf-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Pračka</title>
+	<title>Sčítač</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hledám novou pračku</h1>
-	
-	<h1>Zadej rozměry</h1>
+	<h1>Zadej čísla</h1>
     <label>
-        Výška v centimetrech
-        <input type="number" name="vyska" min="1" >
+        Číslo jedna
+        <input type="number" name="cislo1">
     </label>
 
     <label>
-        Šířka v centrimetrech
-        <input type="number" name="sirka" min="0">
-    </label>
-
-	<label>
-        Hloubka v centrimetrech
-        <input type="number" name="hloubka" min="0">
+        Číslo dvě
+        <input type="number" name="cislo2">
     </label>
 
     <div id="vysledek">
-        Výsledný index:
+        Výsledek:
         <span></span>
     </div>
 
-	<script src="ukol1.js"></script>
+	<script src="ukol2.js"></script>
 </body>
 </html> 
